package cz.mendelu.pef.xmichl.bookaroo.testTags

object LoginRegisterTestTags {

    const val TestTagLoginRegisterButton = "TestTagLoginRegisterButton"
    const val TestTagLoginTextField = "TestTagLoginTextField"
    const val TestTagPasswordTextField = "TestTagPasswordTextField"
    const val TestTagPasswordErrorText = "TestTagPasswordErrorText"
    const val TestTagLoginErrorText = "TestTagLoginErrorText"
    const val TestTagChangeLoginRegisterButton = "TestTagChangeLoginRegisterButton"

}

